@@ -20,3 +20,5 @@
 - animationScene paste should also copy plugin items and vector attributes
 
 - load xml should be done in items itself
+
+- serialize scene background keyframes
